assert-struct/tests/snapshots/repeated_field_patterns__repeated_field_failure.snap
---
source: assert-struct/tests/repeated_field_patterns.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/repeated_field_patterns_errors/repeated_field_failure.rs:17:14
   |
17 |         age: <= 99,   // This should fail: 105 <= 99 ✗
   |              ^^^^^ got 105
